# bowyer

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DEPLOY.md  Dockerfile  INTEGRATIONS.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  tailwind.config.ts
content/: twitter-article-dashboard-vs-workforce.md  twitter-article-robinhood-retail-thesis.md  twitter-article-telegram-workforce.md
contracts/: BusinessRegistry.sol  README.md
examples/virtuals-acp/: README.md  agent-hires-agent.mjs  hire-bowyer-business.mjs
public/downloads/: bowyer-sdk-0.1.0.tgz  bowyer_sdk-0.1.0-py3-none-any.whl
scripts/: make-brand-transparent.py  make-logo-transparent.py  stream.mjs
sdk/python/: README.md  pyproject.toml
sdk/python/bowyer_sdk/: __init__.py  client.py
sdk/typescript/: README.md  package.json  tsconfig.json
src/: instrumentation.ts
src/app/: globals.css  layout.tsx  page.tsx
src/lib/: acp-offerings.ts  agent-avatars.ts  agent-forge.ts  agent-hiring.ts  agent-identity.ts  agent-personas.ts  agent-playground.ts  agent-runtime.ts  agent-treasury.ts  avatar-creator.ts  broadcast.ts  business-registry.ts  chain-scanner.ts  chain.ts  creator-stats.ts  db.ts  desk-signals.ts  github-sources.ts  github.ts  incubator-shared.ts  incubator.ts  knowledge-sources.ts  launch-quality.ts  leaderboard.ts  llm-config.ts  mcp-endpoint.ts  mcp-server.ts  mcp-webhooks.ts  mcp.ts  meme-radar.ts  platforms.ts  promo-pricing.ts  rate-limit.ts  related-agents.ts  robinhood-trading.ts  scheduler.ts  signals.ts  (+18 more)
(+178 files in other folders)
